finished with browser view cartabandon1 guess factory US

--- a/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
+++ b/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
@@ -214,14 +214,14 @@
             </table>
 <! ---- END SECTION 1 ---- >
 <! ---- Space Between sections ---- >
-            <table style="width:100%; background-color: #ebeaea; border-bottom-color: #000000; border-bottom-style: solid; border-bottom-width: 2px;">
+            <table style="width:100%; background-color: #ebeaea; border-bottom-color: #000000; border-bottom-style: solid; border-bottom-width: 1px;">
               <tbody>
                 <tr>
                   <td>
                     <table style="width:100%;">
                       <tbody>
                         <tr>
-                          <td style="height: 100px; font-size:9px;line-height:12px;padding-top:5px;padding-bottom:25px;padding-right:0;padding-left:0;">&nbsp;
+                          <td style="height: 75px; font-size:9px;line-height:12px;padding-top:5px;padding-bottom:25px;padding-right:0;padding-left:0;">&nbsp;
                           </td>
                         </tr>
                     </table>
@@ -239,7 +239,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <p style="font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 33px; letter-spacing: .09em; font-weight: bold; text-align: center; margin-bottom: 20px;">
+                            <p style="font-family: Helvetica, Arial, sans-serif; color: #000000; font-size: 49px; font-weight: bold; text-align: center; margin-bottom: 50px; text-decoration: underline;">
                               JUST FOR YOU
                             </p>
                           </td>
@@ -271,25 +271,6 @@
                         </tr>
                       </tbody>
                     </table>
-<! ---- DESCRIPTIONS ---- >
-                    <table style="width: 100%">
-                      <tbody>
-                        <tr>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-bottom: 20px; font-size: 12px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 18px">
-                              Charlene shirred dress<br>
-                              $89.00
-                            </p>
-                          </td>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-bottom: 20px; font-size: 12px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 18px">
-                              Charlene shirred dress<br>
-                              $89.00
-                            </p>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
 <! ---- SECOND TWO IMAGES ---->
                     <table style="width:100%;">
                       <tbody>
@@ -311,25 +292,6 @@
                                 </tr>
                               </tbody>
                             </table>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-<! ---- DESCRIPTIONS ---- >
-                    <table style="width: 100%">
-                      <tbody>
-                        <tr>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-bottom: 50px; font-size: 12px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 18px">
-                              Charlene shirred dress<br>
-                              $89.00
-                            </p>
-                          </td>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-bottom: 50px; font-size: 12px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 18px">
-                              Charlene shirred dress<br>
-                              $89.00
-                            </p>
                           </td>
                         </tr>
                       </tbody>
