--- a/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
+++ b/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
@@ -170,7 +170,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center">
-                            <a href="#">
+                            <a _label="CONTENT-Section1-main-image" href="#">
                               <img style="margin-right: auto; margin-left: auto; width: 388px;" src="http://i.imgur.com/jnuH4rA.png">
                             </a>
                           </td>
@@ -199,7 +199,7 @@
                           <td style='width:98px'>
                           </td>
                           <td style="text-align: center; width: 386px; padding-bottom: 25px; padding-top: 25px; background-color: #000000">
-                            <a href="https://www.guessfactory.com/en/ShoppingBag" style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-decoration: none; display:block; letter-spacing:.20em; font-size: 23px; color: #ffffff;">
+                            <a _label="CONTENT-Section1-CTA" href="https://www.guessfactory.com/en/ShoppingBag" style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-decoration: none; display:block; letter-spacing:.20em; font-size: 23px; color: #ffffff;">
                               <spam>COMPLETE ORDER</spam>
                             </a>
                           </td>
@@ -221,7 +221,7 @@
                     <table style="width:100%;">
                       <tbody>
                         <tr>
-                          <td style="height: 75px; font-size:9px;line-height:12px;padding-top:5px;padding-bottom:25px;padding-right:0;padding-left:0;">&nbsp;
+                          <td style="height: 50px; font-size:9px;line-height:12px;padding-top:5px;padding-bottom:25px;padding-right:0;padding-left:0;">&nbsp;
                           </td>
                         </tr>
                     </table>
@@ -247,7 +247,7 @@
                       </tbody>
                     </table>
 <! ---- FIRST TWO IMAGES ---- >
-                    <table style="width:100%;">
+                    <table style="width:100%; margin-bottom: 8px">
                       <tbody>
                         <tr>
                           <td>
@@ -255,12 +255,12 @@
                               <tbody>
                                 <tr>
                                   <td style="text-align: center">
-                                    <a href="#" style="text-align: center">
+                                    <a _label="CONTENT-Section2-image1" href="#" style="text-align: center">
                                       <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
                                     </a>
                                   </td>
                                   <td style="text-align: center">
-                                    <a href="#" style="text-align: center">
+                                    <a _label="CONTENT-Section2-image2" href="#" style="text-align: center">
                                       <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
                                     </a>
                                   </td>
@@ -272,7 +272,7 @@
                       </tbody>
                     </table>
 <! ---- SECOND TWO IMAGES ---->
-                    <table style="width:100%;">
+                    <table style="width:100%; margin-bottom: 10px;">
                       <tbody>
                         <tr>
                           <td>
@@ -280,12 +280,12 @@
                               <tbody>
                                 <tr>
                                   <td style="text-align: center">
-                                    <a href="#" style="text-align: center">
+                                    <a _label="CONTENT-Section2-image3" href="#" style="text-align: center">
                                       <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
                                     </a>
                                   </td>
                                   <td style="text-align: center">
-                                    <a href="#" style="text-align: center">
+                                    <a _label="CONTENT-Section2-image4" href="#" style="text-align: center">
                                       <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
                                     </a>
                                   </td>
