guess factory cart abandon 3 fisnished

--- a/GuessFactory/CartAbandon/2/new-Guess-Factory-Cart-Abandon-2-CA.html
+++ b/GuessFactory/CartAbandon/2/new-Guess-Factory-Cart-Abandon-2-CA.html
@@ -205,7 +205,7 @@
                             <p style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-align: center; margin-bottom: 50px; font-size: 17px; color: #000000; line-height: 20px; margin-top: 0px;">
                               The Skylin<br>
                               Denim Shirt<br><br>
-                              <span style="font-size: 14px; font-weight: normal; color: #fb4c4c">$44.99</span>
+                              <span style="font-size: 14px; font-weight: normal; color: #000000">$44.99</span>
                             </p>
                           </td>
                         </tr>
