--- a/GuessFactory/CartAbandon/3/new-Guess-Factory-Cart-Abandon-3-CA.html
+++ b/GuessFactory/CartAbandon/3/new-Guess-Factory-Cart-Abandon-3-CA.html
@@ -107,7 +107,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top: 16px; padding-bottom: 16px;">
-                            <a _label="HEADER-Logo" class="logo" href="https://www.guessfactory.com/en" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
+                            <a _label="HEADER-Logo" class="logo" href="https://guessfactory.ca/en/" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
                               GUESS FACTORY
                             </a>
                           </td>
@@ -119,7 +119,7 @@
                       <tbody>
                         <tr>
                           <td style="padding-top: 8px; padding-bottom: 8px; text-align: center;">
-                            <a _label="HEADER-Free-Shipping-Banner" class= "fss" href="https://www.guessfactory.com/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                            <a _label="HEADER-Free-Shipping-Banner" class= "fss" href="https://www.guessfactory.ca/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $XXX+
                             </a>
                           </td>
@@ -131,7 +131,6 @@
               </tbody>
             </table>
 <! ----- End of HEADER ----- !>
-
   <! --- SECTION 1 ---->
 
             <table style="width:100%; background-color: #ebeaea;">
@@ -165,7 +164,7 @@
                         </tr>
                       </tbody>
                     </table>
-<! ---- Double Image ---- >
+<! ---- Double Image1 ---- >
                     <table style="width:100%; margin-bottom: 8px">
                       <tbody>
                         <tr>
@@ -190,7 +189,53 @@
                         </tr>
                       </tbody>
                     </table>
-<! ---- Double Description ---- >
+<! ---- Double Description1 ---- >
+                    <table style='width:100%'>
+                      <tbody>
+                        <tr>
+                          <td style="width:50%; font-family: Helvetica Neue, Arial, sans-serif;">
+                            <p style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-align: center; margin-bottom: 50px; font-size: 17px; color: #000000; line-height: 20px; margin-top: 0px;">
+                              The Skylin<br>
+                              Denim Shirt<br><br>
+                              <span style="font-size: 14px; font-weight: normal; color: #000000">$44.99</span>
+                            </p>
+                          </td>
+                          <td style="width:50%; font-family: Helvetica Neue, Arial, sans-serif;">
+                            <p style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-align: center; margin-bottom: 50px; font-size: 17px; color: #000000; line-height: 20px; margin-top: 0px;">
+                              The Skylin<br>
+                              Denim Shirt<br><br>
+                              <span style="font-size: 14px; font-weight: normal; color: #000000">$44.99</span>
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Double Image2 ---- >
+                    <table style="width:100%; margin-bottom: 8px">
+                      <tbody>
+                        <tr>
+                          <td>
+                            <table style="width: 100%;">
+                              <tbody>
+                                <tr>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image3" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image4" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Double Description2 ---- >
                     <table style='width:100%'>
                       <tbody>
                         <tr>
@@ -322,7 +367,6 @@
             </table>
 
   <!-- end CONTENT -->
-  
 <! ----- Footer ----- !>
             <table style="width: 100%">
               <tbody>
@@ -333,7 +377,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a _label="FOOTER-Button-New-Arrivals" class="buttons" href="https://www.guessfactory.com/en/Catalog/Browse/new-arrivals/women/?rd=0" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a _label="FOOTER-Button-New-Arrivals" class="buttons" href="https://www.guessfactory.ca/en/Catalog/Browse/new-arrivals/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -345,7 +389,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a _label="FOOTER-Button-Sale" class="buttons" href="https://www.guessfactory.com/en/catalog/browse/sale/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a _label="FOOTER-Button-Sale" class="buttons" href="https://www.guessfactory.ca/en/Catalog/Browse/sale/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               SALE
                             </a>
                           </td>
@@ -357,7 +401,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a _label="FOOTER-Button-Find-a-Store" class="buttons" href="https://www.guessfactory.com/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
+                            <a _label="FOOTER-Button-Find-a-Store" class="buttons" href="https://www.guessfactory.ca/en/StoreLocator/" style="display: block; font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 18px; letter-spacing: .05em; font-weight: bold;">
                               FIND A STORE
                             </a>
                           </td>
@@ -369,7 +413,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a _label="FOOTER-Button-Join-Guess-List" class="buttons" href="https://www.guessfactory.com/en/Account/RegisterLoyalty?" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a _label="FOOTER-Button-Join-Guess-List" class="buttons" href="https://www.guessfactory.ca/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -430,12 +474,12 @@
                       <tbody>
                         <tr>
                           <td style="width:50%; color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: right; padding-right:5%; padding-top:24px; padding-bottom:24px;">
-                            <a _label="FOOTER-Bottom-Privacy-Policy" class="corporate" href="https://www.guessfactory.com/en/customercare/privacytechsupport/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Privacy-Policy" class="corporate" href="https://www.guess.ca/en/privacypolicy/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               PRIVACY POLICY
                             </a>
                           </td>
                           <td style="width:50%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-left:5%; padding-top:24px; padding-bottom:24px;">
-                            <a _label="FOOTER-Bottom-Contact-Us" class="corporate" href="service@guessfactory.com" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Contact-Us" class="corporate" href="https://guessfactory.ca/en/CustomerCare/ContactUs/" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               CONTACT US
                             </a>
                           </td>
@@ -458,8 +502,8 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a _label="LEGAL-TEXT-Offer-Guessfactory.com" href="https://www.guessfactory.com/en" style="color:#333333;">
-                          GUESSFACTORY.com
+                        <a _label="LEGAL-TEXT-Offer-Guessfactory.com" href="https://www.guessfactory.ca/en" style="color:#333333;">
+                          GUESSFACTORY.ca
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
                       <span class="ioslink333">
@@ -470,8 +514,8 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a _label="LEGAL-TEXT-Returns" href="https://www.guessfactory.com/en/customercare/returns/" style="color:#333333;">
-                          GUESSfactory.com/en/customercare/returns/
+                        <a _label="LEGAL-TEXT-Returns" href="https://www.guessfactory.ca/en/CustomerCare/Returns/" style="color:#333333;">
+                          GUESSfactory.ca/en/customercare/returns/
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
                     </p>
@@ -481,11 +525,11 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a _label="LEGAL-TEXT-discount-Guessfactory.com" href="https://www.guessfactory.com/en" style="color:#333333;">
+                      <a _label="LEGAL-TEXT-discount-Guessfactory.com" href="https://www.guessfactory.ca/en" style="color:#333333;">
                         GUESSFACTORY.com
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
-                       <a _label="LEGAL-TEXT-Offer-not-valid-Guessfactory.com" href="https://www.guessfactory.com/en" style="color:#333333;">
+                       <a _label="LEGAL-TEXT-Offer-not-valid-Guessfactory.com" href="https://www.guessfactory.ca/en" style="color:#333333;">
                         GUESS FACTORY
                       </a>
                        stores in the United States or Canada or at
@@ -501,7 +545,7 @@
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a _label="LEGAL-TEXT-Unsubscribe" href="https://www.guessfactory.com/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a _label="LEGAL-TEXT-Unsubscribe" href="https://www.guess.ca/en/subscription/unsubscribe" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
