--- a/GuessFactory/CartAbandon/3/new-Guess-Factory-Cart-Abandon-3-US.html
+++ b/GuessFactory/CartAbandon/3/new-Guess-Factory-Cart-Abandon-3-US.html
@@ -165,7 +165,7 @@
                         </tr>
                       </tbody>
                     </table>
-<! ---- Double Image ---- >
+<! ---- Double Image1 ---- >
                     <table style="width:100%; margin-bottom: 8px">
                       <tbody>
                         <tr>
@@ -190,7 +190,53 @@
                         </tr>
                       </tbody>
                     </table>
-<! ---- Double Description ---- >
+<! ---- Double Description1 ---- >
+                    <table style='width:100%'>
+                      <tbody>
+                        <tr>
+                          <td style="width:50%; font-family: Helvetica Neue, Arial, sans-serif;">
+                            <p style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-align: center; margin-bottom: 50px; font-size: 17px; color: #000000; line-height: 20px; margin-top: 0px;">
+                              The Skylin<br>
+                              Denim Shirt<br><br>
+                              <span style="font-size: 14px; font-weight: normal; color: #000000">$44.99</span>
+                            </p>
+                          </td>
+                          <td style="width:50%; font-family: Helvetica Neue, Arial, sans-serif;">
+                            <p style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-align: center; margin-bottom: 50px; font-size: 17px; color: #000000; line-height: 20px; margin-top: 0px;">
+                              The Skylin<br>
+                              Denim Shirt<br><br>
+                              <span style="font-size: 14px; font-weight: normal; color: #000000">$44.99</span>
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Double Image2 ---- >
+                    <table style="width:100%; margin-bottom: 8px">
+                      <tbody>
+                        <tr>
+                          <td>
+                            <table style="width: 100%;">
+                              <tbody>
+                                <tr>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image3" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image4" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Double Description2 ---- >
                     <table style='width:100%'>
                       <tbody>
                         <tr>
