gbyguess header footer finsihed

--- a/Guess/header-footer/new-header-footer-guess-US.html
+++ b/Guess/header-footer/new-header-footer-guess-US.html
@@ -79,8 +79,8 @@
                 <tr>
                   <td class='preheader' style="font-family: Arial, sans-serif; color: #666666; font-size: 9px; font-weight: 600; line-height: 12px; letter-spacing: .01em;">
                     To keep seeing us in your inbox, add
-                      <a _label="PREHEADER-Add-Us-To-Favorites" href="mailto:noreply@admarketing.guess.com" style="color: #333333;">
-                        noreply@admarketing.guess.com
+                      <a _label="PREHEADER-Add-Us-To-Favorites" href="mailto:email@e.guess.com" style="color: #333333;">
+                        email@e.guess.com
                       </a>
                      to your address book.
                   </td>
