--- a/GbyGuess/new-header-footer-gbyguess-US.html
+++ b/GbyGuess/new-header-footer-gbyguess-US.html
@@ -74,13 +74,13 @@
                 <tr>
                   <td class="preheader" style="font-family: Arial, sans-serif; color: #666666; font-size: 9px; font-weight: 600; line-height: 12px; letter-spacing: .01em;">
                     To keep seeing us in your inbox, add
-                      <a href="mailto:noreply@admarketing.guess.ca" style="color: #333333;">
-                        noreply@admarketing.guess.ca
+                      <a _label="PREHEADER-Add-Us-To-Favorites" href="mailto:email@e.guess.com" style="color: #333333;">
+                        email@e.guess.com
                       </a>
                      to your address book.
                   </td>
                   <td>
-                    <a class='preheader' href="<%@ include view='MirrorPageUrl' %>" _label="Mirror Page" _type="mirrorPage" style="float: left; color: #333333; text-align: right; font-family: Arial, sans-serif; font-weight: 600; font-size: 9px; line-height: 12px; letter-spacing: .01em;">
+                    <a _label="PREHEADER-Mirror-Page" class='preheader' href="<%@ include view='MirrorPageUrl' %>" _label="Mirror Page" _type="mirrorPage" style="float: left; color: #333333; text-align: right; font-family: Arial, sans-serif; font-weight: 600; font-size: 9px; line-height: 12px; letter-spacing: .01em;">
                       View in Browser
                     </a>
                   </td>
@@ -97,7 +97,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="https://www.gbyguess.com/en/">
+                            <a _label="HEADER-Logo" href="https://www.gbyguess.com/en/">
                               <img src="http://content.guess.com/GuessUS/GbyGuess/HeadersFooters/2015/October/10.22/Gby_Email_LOGO.png" width="100%">
                             </a>
                           </td>
@@ -109,7 +109,7 @@
                       <tbody>
                         <tr>
                           <td style="padding-top:11px; padding-bottom:11px; text-align: center;">
-                            <a class= "fss" href="https://www.gbyguess.com/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                            <a _label="HEADER-Free-Shipping-Banner" class= "fss" href="https://www.gbyguess.com/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $XX+
                             </a>
                           </td>
@@ -132,7 +132,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="https://www.gbyguess.com/en/Catalog/Browse/whats-new/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
+                            <a _label="FOOTER-Button-New-Arrivals" class="buttons" href="https://www.gbyguess.com/en/Catalog/Browse/whats-new/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -144,7 +144,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="https://www.gbyguess.com/en/Catalog/Browse/?f_on_sale=Y" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
+                            <a _label="FOOTER-Button-Sale" class="buttons" href="https://www.gbyguess.com/en/Catalog/Browse/?f_on_sale=Y" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
                               SALE
                             </a>
                           </td>
@@ -156,7 +156,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="https://www.gbyguess.com/en/StoreLocator/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
+                            <a _label="FOOTER-Button-Find-a-Store" class="buttons" href="https://www.gbyguess.com/en/StoreLocator/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .20em; font-weight: bold;">
                               FIND A STORE
                             </a>
                           </td>
@@ -168,7 +168,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.gbyguess.com/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a _label="FOOTER-Button-Join-GbyGuess-List" class="buttons" href="https://www.gbyguess.com/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -180,7 +180,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://shop.guess.ca/en/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
+                            <a _label="FOOTER-Hashtag" class="buttons" href="https://shop.guess.ca/en/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ffffff; font-size: 20px; letter-spacing: .20em;">
                               #GBYGUESS
                             </a>
                           </td>
@@ -192,32 +192,32 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="https://www.facebook.com/GbyGUESS/">
+                            <a _label="FOOTER-Social-Facebook" href="https://www.facebook.com/GbyGUESS/">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_facebook_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="https://twitter.com/GbyGUESS">
+                            <a _label="FOOTER-Social-Twitter" href="https://twitter.com/GbyGUESS">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_twitter_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="https://www.instagram.com/gbyguess/">
+                            <a _label="FOOTER-Social-Instagram" href="https://www.instagram.com/gbyguess/">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_Instagram_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="http://pinterest.com/guess/">
+                            <a _label="FOOTER-Social-Pinterest" href="http://pinterest.com/guess/">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_Pinterest_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="https://www.youtube.com/user/GUESSincTV">
+                            <a _label="FOOTER-Social-YouTube" href="https://www.youtube.com/user/GUESSincTV">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_youtube_15900.png">
                             </a>
                           </td>
                           <td>
-                            <a href="https://www.snapchat.com/add/gbyguesssnaps">
+                            <a _label="FOOTER-Social-Snapchat" href="https://www.snapchat.com/add/gbyguesssnaps">
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_snapchat_15900.png">
                             </a>
                           </td>
@@ -229,17 +229,17 @@
                       <tbody>
                         <tr>
                           <td style="color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; width: 33%; text-align: right; padding-top:24px; padding-bottom:24px;">
-                            <a href="https://www.gbyguess.com/en/privacypolicy/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Privacy-Policy" href="https://www.gbyguess.com/en/privacypolicy/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               PRIVACY POLICY
                             </a>
                           </td>
                           <td style="color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; width: 33%; text-align: center; padding-top:24px; padding-bottom:24px;">
-                            <a href="https://www.gbyguess.com/en/gbyguessapp/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Get-The-App" href="https://www.gbyguess.com/en/gbyguessapp/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               GET THE APP
                             </a>
                           </td>
                           <td style="width: 33%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-top:24px; padding-bottom:24px;">
-                            <a href="https://www.gbyguess.com/en/CustomerCare/ContactUs/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a _label="FOOTER-Bottom-Contact-Us" href="https://www.gbyguess.com/en/CustomerCare/ContactUs/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               CONTACT US
                             </a>
                           </td>
@@ -262,7 +262,7 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a href="https://www.gbyguess.com/en/" style="color:#333333;">
+                        <a _label="LEGAL-TEXT-Offer-gbyguess.com" href="https://www.gbyguess.com/en/" style="color:#333333;">
                           GbyGuess.com
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
@@ -274,7 +274,7 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a href="https://www.gbyguess.com/en/CustomerCare/Returns/" style="color:#333333;">
+                        <a _label="LEGAL-TEXT-Returns" href="https://www.gbyguess.com/en/CustomerCare/Returns/" style="color:#333333;">
                           GbyGuess.com/CustomerCare/Returns/
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
@@ -285,12 +285,12 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS.ca
+                      <a _label="LEGAL-TEXT-discount-Guess.com" href="http://www.guess.ca/en/" style="color:#333333;">
+                        GUESS.com
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
-                       <a href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS
+                       <a _label="LEGAL-TEXT-Offer-not-valid-GbyGuess.com" href="https://www.gbyguess.com/en/" style="color:#333333;">
+                        GbyGUESS
                       </a>
                        stores in the United States or Canada or at
                        <span class="ioslink333">
@@ -300,12 +300,12 @@
                     </p>
                     <p style="color: #666666; font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
                       To ensure you always receive emails from GUESS, including the latest styles and exclusive events, add
-                      <a href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
-                        noreply@admarketing.guess.ca
+                      <a _label="LEGAL-TEXT-Add-To-Favorites" href="mailto:email@e.guess.com" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
+                        email@e.guess.com
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a href="https://www.gbyguess.com/en/subscription/unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a _label="LEGAL-TEXT-Unsubscribe" href="https://www.gbyguess.com/en/subscription/unsubscribe" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
