G by Guess Cart abandon1 finsished

--- a/GbyGuess/CartAbandon/1/new-GbyGuess-Cart-Abandon-1.html
+++ b/GbyGuess/CartAbandon/1/new-GbyGuess-Cart-Abandon-1.html
@@ -52,6 +52,8 @@
     </style>
   </head>
   <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
+    <span class="JohnsonBox" style="display: none!important;">Add this email to your favorites to get exclusive offers!!!
+    </span>
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
       &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -93,7 +95,7 @@
                 <tr>
                   <td>
 <! ---- LOGO ---- !>
-                    <table style="width: 100%">
+                    <table style="width: 100%; border-bottom-style: solid; border-bottom-width: 1px; border-bottom-color:#000000 ">
                       <tbody>
                         <tr>
                           <td>
@@ -104,14 +106,82 @@
                         </tr>
                       </tbody>
                     </table>
-<! ---- Free Shipping space --- !>
-                    <table style="width: 100%; border-top-style: solid; border-top-color: #666666; border-top-width: 1px; border-bottom-color: #666666; border-bottom-style: solid; border-bottom-width: 1px;">
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+<! ----- End of HEADER ----- !>
+
+  <! --- SECTION 1 ---->
+
+            <table style="width:100%;">
+              <tbody>
+                <tr>
+                  <td>
+                    <table style="width:100%; ">
+                      <tbody>
+<! ---- Title ---- >
+                        <tr>
+                          <td style="ffont-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;  padding-top: 50px;">
+                            <p class="title" style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;  font-weight: bold;  text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.05em; margin-top: 50px; line-height: 0.9; margin-bottom: 20px;">
+                              <spam>YOUR BAG</spam>
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Subtitle ---- >
+                    <table style='width:100%'>
                       <tbody>
                         <tr>
-                          <td style="padding-top:11px; padding-bottom:11px; text-align: center;">
-                            <a _label="HEADER-Free-Shipping-Banner" class= "fss" href="https://www.gbyguess.com/en/" style="display: block; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
-                              <strong>FREE SHIPPING*</strong> ON ORDERS $XX+
+                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.11em;font-size: 16px; color: #000000; margin-bottom: 2px">
+                              Don't ghost the ones you love.
+                            </p>
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.11em;font-size: 16px; color: #000000; margin-bottom: 30px; margin-top: 0px;">
+                              These Styles are waiting for you.
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Single Image ---- >
+                    <table style='width:100%'>
+                      <tbody>
+                        <tr>
+                          <td style="text-align: center">
+                            <a href="#">
+                              <img style="margin-right: auto; margin-left: auto; width: 388px;" src="http://i.imgur.com/jnuH4rA.png">
                             </a>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Description ---- >
+                    <table style='width:100%'>
+                      <tbody>
+                        <tr>
+                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 30px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px">
+                              Charlene shirred dress<br>
+                              $89.00
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- CTA ---- >
+                    <table style="width:100%;">
+                      <tbody>
+                        <tr>
+                          <td style='width:98px'>
+                          </td>
+                          <td style="text-align: center; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;">
+                            <a href="#" style="text-decoration: none; display:block; letter-spacing:.20em; font-size: 17px; color: #000000;">
+                              <spam>COMPLETE ORDER</spam>
+                            </a>
+                          </td>
+                          <td style='width:98px'>
                           </td>
                         </tr>
                       </tbody>
@@ -120,8 +190,115 @@
                 </tr>
               </tbody>
             </table>
-<! ----- End of HEADER ----- !>
-<! ---- Content Goes Here ---- !>
+<! ---- END SECTION 1 ---- >
+<! ---- Space Between sections ---- >
+            <table style="width:100%;">
+              <tbody>
+                <tr>
+                  <td>
+                    <table style="width:100%;">
+                      <tbody>
+                        <tr>
+                          <td style="height: 100px; font-size:9px;line-height:12px;padding-top:5px;padding-bottom:25px;padding-right:0;padding-left:0;">&nbsp;
+                          </td>
+                        </tr>
+                    </table>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+<! ---- SECTION 2 ---- >
+            <table style='width:100%;'>
+              <tbody>
+                <tr>
+                  <td>
+<! ---- Subtitle ---- >
+                    <table style='width:100%;'>
+                      <tbody>
+                        <tr>
+                          <td>
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;  font-weight: bold; text-align: center; font-size: 33px; color: #000000; letter-spacing: .09em; margin-bottom: 20px;">
+                              YOU MIGHT DIG THIS TOO
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- FIRST TWO IMAGES ---- >
+                    <table style="width:100%;">
+                      <tbody>
+                        <tr>
+                          <td>
+                            <table style="width: 100%;">
+                              <tbody>
+                                <tr>
+                                  <td style="text-align: center">
+                                    <a href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                  <td style="text-align: center">
+                                    <a href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+
+<! ---- SECOND TWO IMAGES ---->
+                    <table style="width:100%;">
+                      <tbody>
+                        <tr>
+                          <td>
+                            <table style="width: 100%;">
+                              <tbody>
+                                <tr>
+                                  <td style="text-align: center">
+                                    <a href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                  <td style="text-align: center">
+                                    <a href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="text-align: center; margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <! ---- Space Between sections ---- >
+            <table style="width:100%;">
+              <tbody>
+                <tr>
+                  <td>
+                    <table style="width:100%;">
+                      <tbody>
+                        <tr>
+                          <td style="height: 40px; font-size:9px;line-height:12px;padding-top:5px;padding-bottom:5px;padding-right:0;padding-left:0;">&nbsp;
+                          </td>
+                        </tr>
+                    </table>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+  <!-- end CONTENT -->
+
 <! ----- Footer ----- !>
             <table style="width: 100%">
               <tbody>
@@ -285,8 +462,8 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a _label="LEGAL-TEXT-discount-Guess.com" href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS.com
+                      <a _label="LEGAL-TEXT-discount-Guess.com" href="https://www.gbyguess.com/en/" style="color:#333333;">
+                        GbyGUESS.com
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
                        <a _label="LEGAL-TEXT-Offer-not-valid-GbyGuess.com" href="https://www.gbyguess.com/en/" style="color:#333333;">
