Gbyguess cartabandon done

--- a/GbyGuess/CartAbandon/3/new-GbyGuess-Cart-Abandon-3.html
+++ b/GbyGuess/CartAbandon/3/new-GbyGuess-Cart-Abandon-3.html
@@ -124,7 +124,7 @@
                         <tr>
                           <td style="ffont-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;  padding-top: 50px;">
                             <p class="title" style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;  font-weight: bold;  text-align: center; font-size: 48px; color: #000000; letter-spacing: 0.05em; margin-top: 50px; line-height: 0.9; margin-bottom: 20px;">
-                              <spam>YOUR BAG</spam>
+                              <spam>LAST CALL</spam>
                             </p>
                           </td>
                         </tr>
@@ -136,35 +136,106 @@
                         <tr>
                           <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
                             <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.11em;font-size: 16px; color: #000000; margin-bottom: 2px">
-                              Don't ghost the ones you love.
+                              Everything in your bag will
                             </p>
                             <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.11em;font-size: 16px; color: #000000; margin-bottom: 30px; margin-top: 0px;">
-                              These Styles are waiting for you.
+                              disappear in a few hours...
                             </p>
                           </td>
                         </tr>
                       </tbody>
                     </table>
-<! ---- Single Image ---- >
-                    <table style='width:100%'>
+<! ---- Double Image ---- >
+                    <table style="width:100%;">
                       <tbody>
                         <tr>
-                          <td style="text-align: center">
-                            <a _label="CONTENT-Section1-main-image" href="#">
-                              <img style="margin-right: auto; margin-left: auto; width: 388px;" src="http://i.imgur.com/jnuH4rA.png">
-                            </a>
+                          <td>
+                            <table style="width: 100%;">
+                              <tbody>
+                                <tr>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image1" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image2" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
                           </td>
                         </tr>
                       </tbody>
                     </table>
-<! ---- Description ---- >
+<! ---- Double Description ---- >
                     <table style='width:100%'>
                       <tbody>
                         <tr>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 30px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px">
-                              Charlene shirred dress<br>
+                          <td style="width: 50%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 10px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px">
+                              GUESS CONNECT<br>
+                              SMARTWATCH<br>
+                              IN WHITE<br>
+                              <br>
+                              $249.00
+                            </p>
+                          </td>
+                          <td style="width: 50%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 10px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px;">
+                              TEXTURE BANDAGE<br>
+                              CROP TOP<br>
+                              <br>
                               $89.00
+                            </p>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Double Image ---- >
+                    <table style="width:100%;">
+                      <tbody>
+                        <tr>
+                          <td>
+                            <table style="width: 100%;">
+                              <tbody>
+                                <tr>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image3" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                  <td style="text-align: center">
+                                    <a _label="CONTENT-Section1-image4" href="#" style="text-align: center">
+                                      <img src="http://i.imgur.com/0Gtv0Hy.png" style="margin-right: auto; margin-left: auto;">
+                                    </a>
+                                  </td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+<! ---- Double Description ---- >
+                    <table style='width:100%'>
+                      <tbody>
+                        <tr>
+                          <td style="width: 50%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 10px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px">
+                              JESSIE DENIM JUMPSUIT<br>
+                              <br>
+                              $128.00
+                            </p>
+                          </td>
+                          <td style="width: 50%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
+                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 10px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px;">
+                              NOEL SLEEVELESS<br>
+                              LACE DRESS<br>
+                              <br>
+                              $108.00
                             </p>
                           </td>
                         </tr>
@@ -177,7 +248,7 @@
                           <td style='width:98px'>
                           </td>
                           <td style="text-align: center; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;">
-                            <a _label="CONTENT-Section1-CTA" href="#" style="text-decoration: none; display:block; letter-spacing:.20em; font-size: 17px; color: #000000;">
+                            <a _label="CONTENT-Section1-CTA" href="#" style="text-decoration: none; display:block; letter-spacing:.20em; font-size: 17px; color: #000000; font-weight: bold;">
                               <spam>COMPLETE ORDER</spam>
                             </a>
                           </td>
